--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,7 @@
 {
-  "presets": ["es2016"]
+    "presets": [
+      "es2015",
+      "stage-0"
+    ],
+    "plugins": ["transform-runtime", "transform-async-to-generator"]
 }
