--- a/package.json
+++ b/package.json
@@ -20,11 +20,19 @@
   },
   "homepage": "https://github.com/Hunrik/crawlmap#readme",
   "dependencies": {
-    "mocha": "^3.1.2"
+    "bluebird": "^3.4.6",
+    "mocha": "^3.1.2",
+    "simple-get": "^2.3.0",
+    "unzip-response": "^2.0.1",
+    "xml2js": "^0.4.17",
+    "zlib": "^1.0.5"
   },
   "devDependencies": {
     "babel-core": "^6.18.2",
+    "babel-eslint": "^7.1.0",
     "babel-loader": "^6.2.7",
+    "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-polyfill": "^6.16.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-es2016": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
