--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "crawlmap",
-  "version": "0.1.0",
+  "version": "0.2.3",
   "description": "A sitemapping tool for crawlers",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "npm run build && mocha dist/test/index.js",
     "build": "npm run clean && babel src --out-dir dist --copy-files",
     "start": "babel-node examples/index.js",
+    "prepublish": "npm run build",
     "clean": "rm -rf dist"
   },
   "repository": {
@@ -21,6 +22,7 @@
   "homepage": "https://github.com/Hunrik/crawlmap#readme",
   "dependencies": {
     "bluebird": "^3.4.6",
+    "chai-as-promised": "^6.0.0",
     "mocha": "^3.1.2",
     "simple-get": "^2.3.0",
     "unzip-response": "^2.0.1",
@@ -37,6 +39,7 @@
     "babel-preset-es2016": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
     "chai": "^3.5.0",
+    "eslint": "^3.10.2",
     "eslint-config-standard": "^6.2.1",
     "eslint-plugin-promise": "^3.3.2",
     "eslint-plugin-standard": "^2.0.1"
