--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "homepage": "https://github.com/Hunrik/crawlmap#readme",
   "dependencies": {
-    "babel": "^6.5.2",
+    "babel-cli": "^6.18.0",
     "bluebird": "^3.4.6",
     "chai-as-promised": "^6.0.0",
     "mocha": "^3.1.2",
