--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,4 @@
 {
-    "presets": [
-      "es2015",
-      "stage-0"
-    ],
-    "plugins": ["transform-runtime", "transform-async-to-generator"]
+  "presets": [ "es2015-node4", "stage-0" ],
+  "plugins": ["transform-runtime"]
 }
